@@ -1,3 +1,8 @@
+2001-02-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
+
+	* lib/scanner-smi.l: Martin Schulz noticed a problem with
+	the use of the isspace() macro on Solaris. Thanks.
+
 2001-02-10  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
 
 	* mibs/ietf/PINT-MIB: added (RFC 3055).
